--- a/keeper-app/src/index.css
+++ b/keeper-app/src/index.css
@@ -9,6 +9,8 @@ html {
 body {
   background: #eee;
   padding: 0 16px;
+  background-image: url("https://www.transparenttextures.com/patterns/cubes.png");
+
 }
 
 header {
@@ -69,6 +71,8 @@ footer p {
 
 }
 
+
+
 form {
   position: relative;
   width: 480px;
@@ -88,17 +92,17 @@ form textarea {
   font-family: inherit;
   resize: none;
 }
-form button {
+
+
+
+form .MuiFab-root {
   position: absolute;
   right: 18px;
   bottom: -18px;
-  background: #f5ba13;
+  background-color: #f5ba13;
   color: #fff;
-  border: none;
-  border-radius: 50%;
-  width: 36px;
-  height: 36px;
+  width: 40px;
+  height: 40px;
+  min-height: 0;
   box-shadow: 0 1px 3px rgba(0, 0, 0, 0.3);
-  cursor: pointer;
-  outline: none;
 }
